@@ -32,18 +32,17 @@ public class ReplicationSourceFactory {
 
   private static final Logger LOG = LoggerFactory.getLogger(ReplicationSourceFactory.class);
 
-  static ReplicationSourceInterface create(Configuration conf, String peerId) {
-    ReplicationQueueInfo replicationQueueInfo = new ReplicationQueueInfo(peerId);
+  static ReplicationSourceInterface create(Configuration conf, String queueId) {
+    ReplicationQueueInfo replicationQueueInfo = new ReplicationQueueInfo(queueId);
     boolean isQueueRecovered = replicationQueueInfo.isQueueRecovered();
     ReplicationSourceInterface src;
     try {
       String defaultReplicationSourceImpl =
           isQueueRecovered ? RecoveredReplicationSource.class.getCanonicalName()
               : ReplicationSource.class.getCanonicalName();
-      @SuppressWarnings("rawtypes")
-      Class c = Class.forName(
+      Class<?> c = Class.forName(
         conf.get("replication.replicationsource.implementation", defaultReplicationSourceImpl));
-      src = (ReplicationSourceInterface) c.newInstance();
+      src = c.asSubclass(ReplicationSourceInterface.class).getDeclaredConstructor().newInstance();
     } catch (Exception e) {
       LOG.warn("Passed replication source implementation throws errors, "
           + "defaulting to ReplicationSource",
